# Link-Engine

./: .directory  .gitignore  README.md  commits n plans.txt  game.bat  game.sh  globvars.py  key_press.py  logs.txt  main.py  notes.txt  planner.txt  pokedex.json  project_dir.txt  pyproject.toml
Dump stuff/: dump.py  notes.txt  t.json  test.txt  testing stuffs.py  testing stuffs.py~
Dump stuff/db_testing/: db_docs.txt  dump.json  make_db.py  notes.txt  pokeapitesting.py  pokedex.json
Dump stuff/db_testing/docs/: Evolution.txt  Moves.txt  pokemon.txt
audio/: dialogue algo.txt  dialogue_sys.py  speak.py
config/: config.json  config.py
fonts/: fonts.py
graphics/maps/: 2 meta.json  grey meta.json  grey2 meta.json  twinleaf meta.json
graphics/maps/scripts/: load_maps.py
graphics/sprites/Sprites/: Sprites.py  spritesheets.py
graphics/sprites/overworld/: female movement.json
mechanics/: Log.py  battle.py  exp_formulas.py  key_press.py  load_userdata.py  party pkmn.json  pc pkmn.json  pokedex.json  pokemondata.json  testing stuffs.py
src/map_maker/: globvars.py  map_maker.py
src/pokemon_link_engine/: main.py  moves.txt  project_dir.txt  pygame_test.py
src/pokemon_link_engine/utils/: Log.py  (+5 more)
users/loona/: config.json
utils/: README.txt  directories.py  file_utils.py  json_utils.py  key_press.py  pygame_utils.py
utils/map_maker/: data.json  globvars.py  keybinds.json  map_maker.py
utils/system/: sys_info.json
venv2/: pyvenv.cfg
venv_unix/: pyvenv.cfg
venv_win/: pyvenv.cfg
venv_win/Scripts/: activate  activate.bat  activate.fish  activate.nu
(+33 files in other folders)
