[tool.poetry]
name = "pokemon-link-engine"
version = "0.1.0"
description = ""
authors = [""]
# license = ""
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.1.2"
keyboard = "0.13.5"
psutil = "5.9.0"
screeninfo = "0.8"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
